--- a/css/main.css
+++ b/css/main.css
@@ -177,7 +177,7 @@ nav {
 .hero {
     background-color: rgba(196, 196, 196, 1);
     background-image: url("/images/hero.jpg");
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     height: 600px;
