--- a/css/main.css
+++ b/css/main.css
@@ -347,6 +347,55 @@ nav {
 
 
 /* Button */
+.backdrop {
+    position: fixed;
+    
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.backdrop.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.modal {
+    position:absolute;
+    top: 50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+
+    width: 528px;
+    height: 581px;
+
+    background-color: #FFFFFF;
+}
+
+.button-closer {
+    position: absolute;
+    top: 0;
+    right: 0;
+
+    margin-right: 8px;
+    margin-top: 8px;
+
+    width: 30px;
+    height: 30px;
+
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: #FFFFFF;
+    cursor: pointer;
+}
+
+.closer-icon {
+    fill: #000000;
+}
+
 .primary-button {
     color: var(--main-bg-color);
     background-color: var(--accent-color);
@@ -365,6 +414,7 @@ nav {
     text-align: center;
     border-radius: 4px;
     padding: 10px 32px;
+    cursor: pointer;
 }
 
 .button {
