--- a/css/main.css
+++ b/css/main.css
@@ -108,6 +108,10 @@ nav {
     text-decoration: none;
 
     margin-right: 50px;
+
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .site-nav .link:hover,
@@ -162,6 +166,10 @@ nav {
     line-height: 1.14;
     letter-spacing: 0.02em;
     text-decoration: none;
+
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact:not(:last-child) {
@@ -289,6 +297,9 @@ nav {
     background-color: rgba(47, 48, 58, 0.8);;
     
     opacity: 0;
+
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     }
 
 .direction-block:hover::before {
@@ -310,6 +321,9 @@ nav {
     color: #FFFFFF;
 
     opacity: 0;
+
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .direction-text:hover {
@@ -431,6 +445,9 @@ nav {
     border: none;
     padding: 6px 22px;
     cursor:pointer;
+
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover,
@@ -492,6 +509,9 @@ nav {
 
     margin-bottom: 30px;
     margin-right: 30px;
+
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .project {
@@ -532,22 +552,30 @@ footer {
     margin-top: 4px;
 }
 
-.project-block {
-    position:relative;
+.project {
+    position:absolute;
 }
 
-.project-block:hover::before {
+.project:hover::before,
+.project:focus::before  {
     opacity: 1;
 }
 
-.project-block::before {
+.project::before {
     position: absolute;
     content:"";
     width: 100%;
     height: 100%;
+
+    width: 370px;
+    height: 294px;
+
     background-color: rgba(33, 150, 243, 0.9);
 
     opacity: 0;
+
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .project-description {
@@ -559,7 +587,7 @@ footer {
     color:#FFFFFF;
 
     width: 370px;
-    height: 294px;
+    height: 404px;
 
     top: 50%;
     left: 50%;
@@ -568,9 +596,13 @@ footer {
     padding: 63px 24px 63px 24px;
 
     opacity: 0;
+
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.project-description:hover {
+.project-description:hover,
+.project-description:focus {
     opacity: 1;
 }
 
@@ -616,6 +648,10 @@ footer {
     margin-bottom: 30px;
     background-color: var(--main-bg-color);
 
+    transition-property: border;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .list-client:not(:last-child) {
@@ -639,6 +675,10 @@ footer {
     color: rgba(175,177,184,1);
     width: 170px;
     height: 90px;
+
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .container-client .client {
@@ -646,6 +686,9 @@ footer {
     justify-content: center;
     align-items: center;
     fill: currentColor;
+
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .container-client .client:hover,
@@ -657,10 +700,18 @@ footer {
     height: 20px;
     width: 20px;
     fill: currentColor;
+
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .icon {
     color: rgba(175,177,184,1);
+
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-spec:not(:last-child) {
@@ -676,6 +727,10 @@ footer {
     width: 44px;
     height: 44px;
     border-radius: 50%;
+
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-element:not(:last-child) {
@@ -712,6 +767,10 @@ footer {
 
 .container-social .social-element {
     background-color: rgba(255, 255, 255, 0.1);
+
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .container-social .social-element:hover,
