--- a/css/main.css
+++ b/css/main.css
@@ -560,26 +560,32 @@ footer {
     position:absolute;
 }
 
-.project:hover::before,
-.project:focus::before  {
-    opacity: 1;
+.project-block {
+    position:relative;
+    /* overflow: hidden; */
+    width: 370px;
+    height: 294px;
 }
 
-.project::before {
+.project-block:hover::before,
+.project-block:focus::before  {
+    transform: translateY(0%)
+}
+
+.project-block::before {
     position: absolute;
     content:"";
+
     width: 100%;
     height: 100%;
 
-    width: 370px;
-    height: 294px;
-
     background-color: rgba(33, 150, 243, 0.9);
+    bottom:0;
+    left: 0;
 
-    opacity: 0;
+    transform: translateY(100%);
 
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .project-description {
@@ -588,26 +594,24 @@ footer {
     line-height: 28px;
 
     letter-spacing: 1,5;
-    color:#FFFFFF;
+    color:red;
 
-    width: 370px;
-    height: 404px;
+    top: 0;
+    left: 0;
 
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
 
     padding: 63px 24px 63px 24px;
 
-    opacity: 0;
+    transform: translateY(100%);
 
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .project-description:hover,
 .project-description:focus {
-    opacity: 1;
+    transform: translateY(0%);
 }
 
 .project-title {
