--- a/css/main.css
+++ b/css/main.css
@@ -74,6 +74,7 @@ header {
     align-items: center;
     padding-top: 32px;
     padding-bottom: 32px;
+    height: 80px;
 
 }
 
@@ -100,6 +101,9 @@ nav {
 }
 
 .site-nav .link {
+    position: relative;
+    display: flex;
+    align-items: center;
     color: var(--main-text-color);
     font-weight: 500;
     font-size: 14px;
@@ -108,6 +112,7 @@ nav {
     text-decoration: none;
 
     margin-right: 50px;
+    height: 80px;
 
     transition-property: color;
     transition-duration: 250ms;
@@ -119,6 +124,28 @@ nav {
     color: var(--accent-color);
 }
 
+.site-nav .link::after {
+    position: absolute;
+    content:"";
+    display: flex;
+
+    left: 0;
+    bottom: 0;
+
+    width: 100%;
+    height: 4px;
+    background-color: var(--accent-color);
+
+    /* opacity: 0; */
+
+    transform: scaleX(0);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.link:hover::after {
+    /* opacity: 1; */
+    transform: scaleX(1);
+}
 
 /* Adress */
 .header-address {
@@ -167,9 +194,7 @@ nav {
     letter-spacing: 0.02em;
     text-decoration: none;
 
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact:not(:last-child) {
